from sqlalchemy import Column, Integer, String, ForeignKey
from sqlalchemy.orm import relationship
from app.core.database import Base

class Category(Base):
    __tablename__="categories"

    id=Column(Integer, primary_key=True, index=True)
    name=Column(String, nullable=False)
    department_id=relationship("Department")