erDiagram
  DISTRICT ||--o{ USER : "resides in"
  DISTRICT ||--o{ COMPLAINT : "located in"
  DEPARTMENT ||--o{ CATEGORY : has
  DEPARTMENT ||--o{ USER : employs
  CATEGORY ||--o{ COMPLAINT : classifies
  USER ||--o{ COMPLAINT : "reports (citizen)"
  USER ||--o{ COMPLAINT : "assigned (officer)"
  COMPLAINT ||--o{ COMPLAINT_STATUS_HISTORY : has
  COMPLAINT ||--o{ COMPLAINT_EVIDENCE : has
  USER ||--o{ COMPLAINT_STATUS_HISTORY : records
  USER ||--o{ COMPLAINT_EVIDENCE : uploads

  USER {
    int id PK
    string name
    string email UK
    string password_hash
    string phone
    string role
    int department_id FK
    int district_id FK
    datetime created_at
  }
  COMPLAINT {
    int id PK
    int citizen_id FK
    int officer_id FK
    int category_id FK
    int department_id FK
    int district_id FK
    string title
    string description
    float latitude
    float longitude
    string status
    datetime created_at
    datetime updated_at
  }
  CATEGORY {
    int id PK
    string name
    int department_id FK
  }
  DEPARTMENT {
    int id PK
    string name
  }
  DISTRICT {
    int id PK
    string name
  }
  COMPLAINT_STATUS_HISTORY {
    int id PK
    int complaint_id FK
    string status
    int changed_by FK
    string remarks
    datetime created_at
  }
  COMPLAINT_EVIDENCE {
    int id PK
    int complaint_id FK
    string image_url
    string evidence_type
    int uploaded_by FK
    datetime created_at
  }